# pyqa-30min

./: .gitignore  README.md  pyproject.toml
docs/: index.md
docs/better_python/: call_outside.md
docs/json/: demo.json  json-array.json  json_one_page.md
src/poster/web/: __init__.py  responses.py
src/pyqa_30min/: __about__.py
src/pyqa_30min/caller/: org_codes_caller.py
src/pyqa_30min/json_all/: __init__.py  extract_value_from_json.py  json_differ.py  json_encode_decode.py  json_typed_object.py  object_to_json.py  what_is_json.py
src/pyqa_30min/metaclass_all/: metaclass_intro.py
src/pyqa_30min/org_codes/: __init__.py  util_lib.py
src/pyqa_30min/template_all/: temmplate_utils.py
src/pyqa_30min/yml_template/: yaml_utils.py
tests/: __init__.py
tests/json_all/: country.json  test_json_encode_decode.py  test_json_typed_object.py  test_object_to_json.py  test_what_is_json.py
tests/yaml_all/: structured.yaml  temp.yaml  test.yaml  test_yaml_utils.py
