[tool.poetry]
name = "pyqa-30min"
version = "0.1.0"
description = ""
authors = ["fluent-qa <fluent-qa@163.com>"]
packages = [
    { from = "src", include = "pyqa_30min" }
]
[options]
package_dirt="src"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.2.0"
pydantic = "^1.10.4"
jmespath = "^1.0.1"
dotty-dict = "^1.3.1"
deepdiff = "^6.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath=["src"]